--- a/html/css/home.css
+++ b/html/css/home.css
@@ -3,23 +3,19 @@
 	src: url('/fonts/Oswald-Light.ttf');
 }
 
-@font-face {
-	font-family: 'DroidSans';
-	src: url('/fonts/DroidSans.ttf');
-}
-
 body {
 	text-align: center;
+	background: #202020;
 }
 
 td {
-	background: #F3F3F3;
-	box-shadow: 0px 3px 0px #B0B0B0;
+	background: #404040;
+	box-shadow: 0px 3px 0px #705070;
 }
 
 a {
 	font-family: 'Oswald';
 	font-size: 200%;
-	color: #000000;
+	color: #EEEEEE;
 	text-decoration: none;
 }
